<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_title_shadow" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="27dp"
                    android:contentDescription="@null"
                    android:src="@mipmap/app_logo" />

                <EditText
                    android:id="@+id/et_account"
                    style="@style/EditTextDigitsLetter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/radius_4dp_f2"
                    android:hint="@string/input_hint_account"
                    android:maxLength="20"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp"
                    android:textColor="@color/edit_text_white"
                    android:textColorHint="#ffb8b8b8"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="15dp"
                    android:background="@null"
                    android:hint="输入手机号"
                    android:inputType="number"
                    android:maxLength="11"
                    android:paddingVertical="15dp"
                    android:textColor="#1D1E1F"
                    android:textColorHint="#A9A9A9"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="25dp"
                    android:background="#F2F2F2" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_code"
                        style="@style/EditTextDigitsLetter"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/input_hint_code"
                        android:inputType="number"
                        android:paddingVertical="15dp"
                        android:textColor="#1D1E1F"
                        android:textColorHint="#A9A9A9"
                        android:textSize="14sp" />


                    <TextView
                        android:id="@+id/tv_get_code"
                        android:layout_width="wrap_content"
                        android:layout_height="27dp"
                        android:background="@drawable/bg_get_code"
                        android:gravity="center"
                        android:onClick="doClick"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp"
                        android:text="@string/get_verification_code"
                        android:textColor="#ff999999"
                        android:textSize="12sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="25dp"
                    android:background="#F2F2F2" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:hint="@string/input_hint_password"
                    android:inputType="textPassword"
                    android:paddingVertical="15dp"
                    android:textColor="#1D1E1F"
                    android:textColorHint="#A9A9A9"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="25dp"
                    android:background="#F2F2F2" />

                <!--<ImageView-->
                <!--android:layout_width="64dp"-->
                <!--android:layout_height="64dp"-->
                <!--android:src="@mipmap/app_logo" />-->

                <EditText
                    android:id="@+id/et_password_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:hint="@string/input_hint_password_again"
                    android:inputType="textPassword"
                    android:paddingVertical="15dp"
                    android:textColor="#1D1E1F"
                    android:textColorHint="#A9A9A9"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="25dp"
                    android:background="#F2F2F2" />

                <TextView
                    android:id="@+id/tv_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="100dp"
                    android:background="@drawable/baselib_bg_color77b52902"
                    android:gravity="center"
                    android:onClick="doClick"
                    android:paddingVertical="15dp"
                    android:text="@string/confirm"
                    android:textColor="#ffffffff"
                    android:textSize="14sp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</layout>